# nyxcore-ai-audio

./: .gitignore  INSTALL_WSL.md  README.md  pyproject.toml
config/: default.yaml
demo/: README.md  create_demo_library.py
docs/assets/screenshots/: README.md
nyxcore/: __init__.py  cli.py  config.py  report_pipeline.py
nyxcore/action_plan/: __init__.py  ledger.py  service.py
nyxcore/audio/: __init__.py  cache.py  models.py
nyxcore/audio/backends/: base.py  clap_backend.py  dummy_backend.py  essentia_backend.py  hybrid_backend.py
nyxcore/core/: __init__.py  audio_files.py  jsonl.py  scanner.py  text.py  track.py  utils.py
nyxcore/duplicates/: service.py
nyxcore/health/: __init__.py  service.py
nyxcore/incremental/: __init__.py  service.py
nyxcore/judge/: service.py
nyxcore/llm/: __init__.py  cache.py  deepseek_client.py  models.py
nyxcore/normalize/: __init__.py  parser.py  rules.py
nyxcore/playlist_query/: __init__.py  service.py
nyxcore/rename/: rules.py  service.py
nyxcore/resources/: default.yaml
nyxcore/review_queue/: __init__.py  service.py  state.py
nyxcore/saved_playlists/: __init__.py  service.py
nyxcore/tagging/: __init__.py  ai_writer.py  writer.py
nyxcore/webapi/: app.py  schemas.py
tests/: test_action_history.py  test_action_plan.py  test_audio_file_support.py  test_config_loading.py  test_duplicates.py  test_health_report.py  test_incremental.py  test_playlist_query.py  test_review_queue.py  test_saved_playlists.py  test_web_api.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts
web/src/: index.css  main.tsx
web/src/lib/: api.ts  contracts.ts  hooks.ts  mock-data.ts  query-state.ts  review-presenter.ts  types.ts  url-selection.ts
web/src/ui/: App.tsx  components.tsx  feedback.tsx  format.ts  primitives.tsx  shell.tsx
web/src/ui/history/: HistoryDetailPanel.tsx
web/src/ui/pages/: DashboardPage.tsx  DuplicatesPage.tsx  HealthPage.tsx  HistoryPage.tsx  PlaylistsPage.tsx  ReviewPage.tsx
(+2 files in other folders)
