[project]
name = "nyxcore"
version = "0.2.0"
description = "Local-first music library auditor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "mutagen>=1.47.0",
  "openai>=1.0.0",
  "aiohttp>=3.9.0",
  "sqlmodel>=0.0.22",
  "PyYAML>=6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "nyxcore",
  "nyxcore.core",
  "nyxcore.normalize",
  "nyxcore.tagging",
  "nyxcore.audio",
  "nyxcore.audio.backends",
  "nyxcore.llm",
  "nyxcore.judge",
]
